# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//commonlibrary/memory_utils/purgeable_mem_config.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

module_output_path = "multimedia_image/image_framework"

ohos_unittest("pixelmaptest") {
  module_out_path = module_output_path

  cflags = [
    "-DIMAGE_DEBUG_FLAG",
    "-DIMAGE_COLORSPACE_FLAG",
  ]

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "$graphic_subsystem/utils/color_manager/export",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [
    "$image_subsystem/frameworks/innerkitsimpl/test/unittest/native_image_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_map_parcel_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_map_test.cpp",
  ]

  deps = [
    "$graphic_subsystem/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  if (purgeable_ashmem_enable && defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_memmgr_plugin)) {
    defines = [ "IMAGE_PURGEABLE_PIXELMAP" ]
    external_deps += [ "memmgr_plugin:libpurgeablemem_plugin" ]
  }

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
}

ohos_unittest("imagepixelmaptest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
  ]
  cflags = [ "-DIMAGE_COLORSPACE_FLAG" ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_packer_ex_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_pixel_map_switch_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_pixel_map_test.cpp",
  ]

  deps = [
    #    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native:bitmapconverter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:color_manager",
    "hilog:libhilog",
  ]
  if (use_clang_android || use_clang_ios) {
    external_deps -= [ "graphic_2d:color_manager" ]
  }
}

ohos_unittest("imagepixelmapparceltest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
  sources = [ "./unittest/image_pixel_map_parcel_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",

    #"//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
  ]
}

ohos_unittest("imagesourcetest") {
  DUAL_ADAPTER = true
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_packer_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_gif_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_jpeg_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_png_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_util.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_webp_test.cpp",
    "unittest/image_source_gif_ex_test.cpp",
    "unittest/image_source_svg_test.cpp",
  ]
  if (DUAL_ADAPTER) {
    sources += [
      "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_bmp_test.cpp",
      # "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_raw_test.cpp",
      # "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_wbmp_test.cpp",
    ]
  }

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  if (purgeable_ashmem_enable && defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_memmgr_plugin)) {
    defines = [ "IMAGE_PURGEABLE_PIXELMAP" ]
    external_deps += [ "memmgr_plugin:libpurgeablemem_plugin" ]
  }
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
}

ohos_unittest("jpegdecoderextest") {
  module_out_path = module_output_path

  include_dirs = [
    "$image_subsystem/frameworks/innerkitsimpl/converter/include",
    "$image_subsystem/frameworks/innerkitsimpl/utils/include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/plugins/common/libs/image/libjpegplugin/include",
    "$image_subsystem/plugins/manager/include",
    "//third_party/googletest/googletest/include",
  ]
  cflags = [ "-DIMAGE_COLORSPACE_FLAG" ]
  sources = [ "unittest/jpeg_decoder_ex_test.cpp" ]
  deps = [
    "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils",
    "$image_subsystem/interfaces/innerkits:image_native",
    "$image_subsystem/plugins/common/libs/image/libjpegplugin:jpegplugin",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
}

ohos_unittest("format_agent_plugin_src_test") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//commonlibrary/c_utils/base/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/format_agent_plugin_src_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
  ]

  external_deps = [ "hilog:libhilog" ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
}

ohos_unittest("imageutilstest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/media_utils_lite/interfaces/kits",
    "//foundation/communication/ipc/utils/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_utils_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
  ]

  external_deps = [
    "c_utils:utils",

    #"hilog:libhilog",
    "hitrace:hitrace_meter",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
}

ohos_unittest("colorconvertertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/color_converter_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]

  #  external_deps = [ "hilog:libhilog" ]
}

ohos_unittest("transformtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_transform_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (use_clang_android || use_clang_ios) {
    include_dirs -=
        [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]
  }

  external_deps = [ "c_utils:utils" ]

  #  external_deps = [ "hilog:libhilog" ]
}

ohos_unittest("imagecolorspacetest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  cflags = [ "-DIMAGE_DEBUG_FLAG" ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_color_space_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_util.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "graphic_2d:color_manager",
    "hilog:libhilog",
  ]

  if (use_clang_android || use_clang_ios) {
    external_deps -= [ "graphic_2d:color_manager" ]
  }
}

ohos_unittest("interfacetest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/interface_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("formatagentplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "unittest/format_agent_plugin_svg_test.cpp",
    "unittest/format_agent_plugin_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("attrdatatest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/attr_data_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("convertertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/matrix_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_convert_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/post_proc_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/scan_line_filter_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("gstpluginfwtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/src/thirdpartyadp/gstreamer",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/gst_plugin_fw_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pixelconvertadaptertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_convert_adapter_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("pluginsmanagersrcframeworktest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/manager/include/utils",
    "//foundation/multimedia/image_framework/plugins/manager/src/common",
    "//foundation/multimedia/image_framework/plugins/manager/src/framework",
    "//foundation/multimedia/image_framework/plugins/manager/src/pluginbase",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/src/framework",
    "//third_party/googletest/googletest/include",
    "//third_party/json/single_include/nlohmann",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugins_manager_src_framework_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pngtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libpngplugin/include",
    "$image_subsystem/plugins/common/libs/image/libsvgplugin/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/nine_path_listener_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/png_decoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/png_ninepatch_res_test.cpp",
    "unittest/svg_decoder_test.cpp",
  ]

  deps = [
    "$image_subsystem/plugins/common/libs/image/libsvgplugin:svgplugin",
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libpngplugin:pngplugin",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libpng:png_static",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("receivertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_receiver_manager_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_receiver_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("streamtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/buffer_packer_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/buffer_source_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/file_source_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/incremental_source_stream_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("creatortest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/creator/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_creator_manager_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_creator_test.cpp",
  ]

  deps = [
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libpng:png_static",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("webpplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/flutter/skia/third_party/externals/libwebp/src",
  ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugin_server_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_decoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_encoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_plugin_export_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin:webpplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pluginlibjpegtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "$skia_root/skia/include/codec",
    "$skia_root/skia",
    "$skia_root/skia/include/core",
    "//third_party/flutter/skia/third_party/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/skcms",
    "//third_party/libexif",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugin_libjpeg_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin:jpegplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager_static",
    "//third_party/flutter/build/libjpeg:ace_libjpeg",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libexif:libexif",
  ]
  deps += skia_skcms
  deps += skia_platform
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
  ]
}

ohos_unittest("rawdecodertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/librawplugin/include",
    "//third_party/skia",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/raw_decoder_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/librawplugin:rawplugin",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin:webpplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/skia/third_party/piex",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_unittest("bmpplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libbmpplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/bmp_decoder_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libbmpplugin:bmpplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("gifplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libgifplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//third_party/giflib",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/gif_decoder_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libgifplugin:gifplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("ndktest") {
  module_out_path = module_output_path

  include_dirs = [
    "$image_subsystem/frameworks/kits/js/common/ndk/include",
    "/utils/include",
    "/interfaces/innerkits/include",
    "//third_party/googletest/googletest/include",
    "../../../../../arkui/napi/interfaces/inner_api",
    "../../../../../arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "$resource_management_subsystem/interfaces/native/resource/include",
  ]
  sources = [
    "unittest/image_ndk_test.cpp",
    "unittest/image_packer_mdk_test.cpp",
    "unittest/ndk_test.cpp",
  ]

  deps = [
    "$image_subsystem/frameworks/kits/js/common/ndk:image_ndk",
    "$image_subsystem/frameworks/kits/js/common/ndk:image_packer_ndk",
    "$image_subsystem/frameworks/kits/js/common/ndk:image_receiver_ndk",
    "$image_subsystem/frameworks/kits/js/common/ndk:image_source_ndk",
    "$image_subsystem/frameworks/kits/js/common/pixelmap_ndk:pixelmap_ndk",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("napitest") {
  module_out_path = module_output_path

  include_dirs = [
    "$image_subsystem/frameworks/kits/js/common/include",
    "/utils/include",
    "/interfaces/innerkits/include",
    "//third_party/googletest/googletest/include",
    "../../../../../arkui/napi/interfaces/inner_api",
    "../../../../../arkui/napi/interfaces/kits",
    "//third_party/node/src",
  ]
  sources = [ "unittest/napi_test.cpp" ]

  deps = [
    "$image_subsystem/interfaces/kits/js/common:image",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("jpeg_hw_decoder_test") {
  module_out_path = module_output_path

  sources = [
    "${image_subsystem}/plugins/common/libs/image/libextplugin/src/ext_stream.cpp",
    "${image_subsystem}/plugins/common/libs/image/libextplugin/src/hardware/jpeg_hw_decoder.cpp",
    "unittest/jpeg_hw_decode/common/mock_jpeg_hw_decode_flow.cpp",
    "unittest/jpeg_hw_decode/unittest/jpeg_hw_decoder_test.cpp",
  ]

  include_dirs = [
    "${image_subsystem}/frameworks/innerkitsimpl/test/unittest/jpeg_hw_decode/common/",
    "${image_subsystem}/plugins/common/libs/image/libextplugin/include/",
    "${image_subsystem}/plugins/manager/include/",
    "${image_subsystem}/interfaces/innerkits/include/",
    "${image_subsystem}/../../../drivers/peripheral/base/",
    "${image_subsystem}/../../../drivers/peripheral/display/interfaces/include/",
    "${image_subsystem}/../../../third_party/skia/",
    "${image_subsystem}/../../../third_party/skia/include/codec/",
    "${image_subsystem}/../../../third_party/skia/include/core/",
    "${image_subsystem}/../../../third_party/libjpeg-turbo/",
  ]

  deps = [
    "${image_subsystem}/interfaces/innerkits:image_native",
    "//third_party/googletest:gtest_main",
    "//third_party/skia:skia_ohos",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_codec:image_idl_headers",
    "drivers_interface_codec:libimage_proxy_1.0",
    "drivers_interface_display:display_buffer_idl_headers",
    "drivers_interface_display:display_composer_idl_headers",
    "drivers_interface_display:libdisplay_buffer_hdi_impl",
    "drivers_interface_display:libdisplay_composer_hdi_impl",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

################################################
group("unittest") {
  testonly = true
  deps = [
    ":attrdatatest",
    ":bmpplugintest",
    ":colorconvertertest",
    ":convertertest",
    ":creatortest",
    ":format_agent_plugin_src_test",
    ":formatagentplugintest",
    ":gstpluginfwtest",
    ":imagecolorspacetest",
    ":imagepixelmapparceltest",
    ":imagepixelmaptest",
    ":imagesourcetest",
    ":imageutilstest",
    ":interfacetest",
    ":jpegdecoderextest",
    ":napitest",
    ":pixelconvertadaptertest",
    ":pixelmaptest",
    ":pluginlibjpegtest",
    ":pluginsmanagersrcframeworktest",
    ":pngtest",
    ":rawdecodertest",
    ":receivertest",
    ":streamtest",
    ":transformtest",
    ":webpplugintest",
  ]

  if (enable_jpeg_hw_decode) {
    deps += [ ":jpeg_hw_decoder_test" ]
  }
}
################################################
